gobmkida/g1/gtp_tryko
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_tryko/src/interface/play_gtp.c:1526:22: error: use of undeclared identifier 'pdfa'
return gtp_success( &pdfa.name[70]); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_tryko/src/obj/2/play_gtp.o] Error 1
